refactor(progress) : progress 결합도 분리와 학생의 학습 진도율을 정확하게 계산하고 표시하기 위해 인터페이스 선언 및 전체 코드 리팩토링 및 sql문 추가 및 임시 구현체 구현