@@ -2,12 +2,12 @@ package com.lxp.aplus.progress.application.usecase;
 
 import com.lxp.aplus.common.error.BusinessException;
 import com.lxp.aplus.common.error.code.EnrollmentErrorCode;
-import com.lxp.aplus.enrollment.application.port.out.CourseFinder;
-import com.lxp.aplus.enrollment.application.port.out.LectureResourceSummary;
 import com.lxp.aplus.enrollment.domain.Enrollment;
 import com.lxp.aplus.enrollment.domain.EnrollmentRepository;
-import com.lxp.aplus.progress.application.result.LearningHistoryResult;
-import com.lxp.aplus.progress.application.result.LectureProgressResult;
+import com.lxp.aplus.progress.application.port.LectureDetailInfo;
+import com.lxp.aplus.progress.application.port.LectureProvider;
+import com.lxp.aplus.progress.presentation.response.CourseProgressResponse;
+import com.lxp.aplus.progress.presentation.response.LectureProgressResponse;
 import com.lxp.aplus.progress.domain.Progress;
 import com.lxp.aplus.progress.domain.ProgressRepository;
 import lombok.RequiredArgsConstructor;
@@ -15,99 +15,70 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 @Transactional(readOnly = true)
+@RequiredArgsConstructor
 public class ProgressQueryUseCase {
 
-    private final EnrollmentRepository enrollmentRepository;
-    private final CourseFinder courseFinder;
     private final ProgressRepository progressRepository;
-    private static final int PERCENTAGE_MULTIPLIER = 100;
+    private final EnrollmentRepository enrollmentRepository;
+    private final LectureProvider lectureProvider;
 
-    public LearningHistoryResult getLearningHistory(Long studentId, Long enrollmentId) {
-        Enrollment enrollment = enrollmentRepository.findById(enrollmentId)
+    public CourseProgressResponse getCourseProgress(Long userId, Long courseId) {
+        Enrollment enrollment = enrollmentRepository.findByStudentIdAndCourseId(userId, courseId)
                 .orElseThrow(() -> new BusinessException(EnrollmentErrorCode.ENROLLMENT_NOT_FOUND_OR_NO_ACCESS));
-        enrollment.validateOwner(studentId);
 
         if (enrollment.isExpired(LocalDateTime.now())) {
             throw new BusinessException(EnrollmentErrorCode.ENROLLMENT_EXPIRED_HISTORY_ACCESS_DENIED);
         }
 
-        List<LectureResourceSummary> allLectureResources = courseFinder.
-                findAllLectureResourcesByCourseId(enrollment.getCourseId());
+        List<LectureDetailInfo> lectureDetails = lectureProvider.getLectureDetailsByCourseId(courseId);
 
-        if (allLectureResources.isEmpty()) {
-            return new LearningHistoryResult(
-                    enrollmentId,
-                    0, // overallProgressRate
-                    0L, // lastWatchedVideoId (null 대신 0L)
-                    0, // lastWatchedDurationOfLastVideo (null 대신 0)
-                    null, // lastWatchedAt
-                    Collections.emptyList() // lectureProgresses
-            );
-        }
-
-        List<Long> allResourceIds = allLectureResources.stream()
-                .map(LectureResourceSummary::resourceId)
-                .collect(Collectors.toList());
-        
-        List<Progress> progresses = progressRepository
-                .findByEnrollmentIdAndLectureResourceIds(enrollmentId, allResourceIds);
-
+        List<Progress> progresses = progressRepository.findByEnrollmentId(enrollment.getId());
         Map<Long, Progress> progressMap = progresses.stream()
-                .collect(Collectors.toMap(p -> p.getLectureResource().getId(), p -> p)); 
+                .collect(Collectors.toMap(Progress::getLectureResourceId, Function.identity()));
 
-        List<LectureProgressResult> lectureProgresses = allLectureResources.stream()
-                .map(resourceSummary -> createLectureProgressResult(resourceSummary, progressMap))
-                .collect(Collectors.toList());
+        List<LectureProgressResponse> lectureProgressResponses = lectureDetails.stream()
+                .map(lecture -> {
+                    Progress progress = progressMap.get(lecture.resourceId());
+                    return new LectureProgressResponse(
+                            lecture.resourceId(),
+                            lecture.title(),
+                            progress != null ? progress.getWatchedDuration() : 0,
+                            lecture.totalDurationSeconds(),
+                            progress != null && progress.isCompleted(),
+                            progress != null ? progress.getLastWatchedAt() : null
+                    );
+                })
+                .toList();
 
-        long completedCount = lectureProgresses.stream().filter(LectureProgressResult::isCompleted).count();
-        int overallProgressRate = (int) ((double) completedCount / allResourceIds.size() * PERCENTAGE_MULTIPLIER);
+        int overallProgressRate = calculateOverallProgress(lectureProgressResponses);
 
-        Optional<Progress> lastWatchedProgress = progresses.stream()
+        Progress lastWatchedProgress = progresses.stream()
                 .filter(p -> p.getLastWatchedAt() != null)
-                .max(Comparator.comparing(Progress::getLastWatchedAt));
-        
-        Long lastWatchedVideoId = lastWatchedProgress.map(p -> p.getLectureResource().getId()).orElse(0L);
-        Integer lastWatchedDuration = lastWatchedProgress.map(Progress::getWatchedDuration).orElse(0);
-        java.time.LocalDateTime lastWatchedAt = lastWatchedProgress.map(Progress::getLastWatchedAt).orElse(null);
+                .max(Comparator.comparing(Progress::getLastWatchedAt))
+                .orElse(null);
 
-        return new LearningHistoryResult(
-                enrollmentId,
+        return new CourseProgressResponse(
+                enrollment.getId(),
                 overallProgressRate,
-                lastWatchedVideoId,
-                lastWatchedDuration,
-                lastWatchedAt,
-                lectureProgresses
+                lastWatchedProgress != null ? lastWatchedProgress.getLectureResourceId() : null,
+                lastWatchedProgress != null ? lastWatchedProgress.getLastWatchedAt() : null,
+                lectureProgressResponses
         );
     }
 
-    public LearningHistoryResult getLearningHistoryByCourseId(Long studentId, Long courseId) {
-        Enrollment enrollment = enrollmentRepository.findByStudentIdAndCourseId(studentId, courseId)
-                .orElseThrow(() -> new BusinessException(EnrollmentErrorCode.ENROLLMENT_NOT_FOUND_OR_NO_ACCESS));
-
-        return getLearningHistory(studentId, enrollment.getId());
-    }
-
-    private LectureProgressResult createLectureProgressResult(LectureResourceSummary resourceSummary, Map<Long, Progress> progressMap) {
-        Progress progress = progressMap.get(resourceSummary.resourceId());
-        int watchedDuration = progress != null ? progress.getWatchedDuration() : 0;
-        boolean isCompleted = progress != null ? progress.isCompleted() : false;
-        java.time.LocalDateTime lastWatchedAt = progress != null ? progress.getLastWatchedAt() : null;
-
-        int progressRate = 0;
-        if (progress != null) {
-            progressRate = progress.calculateProgressRate();
+    private int calculateOverallProgress(List<LectureProgressResponse> lectureProgresses) {
+        if (lectureProgresses.isEmpty()) {
+            return 0;
         }
-
-        return LectureProgressResult.of(resourceSummary, watchedDuration, isCompleted, lastWatchedAt, progressRate);
+        long totalCompleted = lectureProgresses.stream().filter(LectureProgressResponse::isCompleted).count();
+        return (int) (totalCompleted * 100 / lectureProgresses.size());
     }
 }
